Add navigation structure with links and classnames

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <link rel="stylesheet" href="css/index.css" />
     <title>Genesis</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navigation">
+      <div class="logo">Genesis</div>
+      <ul class="navigation__links">
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
