Add footer with social media icons and web links

--- a/index.html
+++ b/index.html
@@ -4,17 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fontawesome cdn-link-->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" href="images/favicon-16x16.png" />
     <title>Genesis</title>
   </head>
   <body>
+    <!-- Navigation -->
     <nav class="navigation">
       <div class="logo">Genesis</div>
       <ul class="navigation__links">
         <li><a href="#">Projects</a></li>
-        <li><a href="#">Contacts</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <!-- Footer -->
+    <footer>
+      <div class="footer__logo">Genesis</div>
+      <ul>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <ul>
+        <li>
+          <a href="https://dribbble.com/tags/flipcard"
+            ><i class="fab fa-dribbble"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/?lang=en"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
