--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
       crossorigin="anonymous"
     />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" href="images/favicon-16x16.png" />
     <title>Genesis</title>
@@ -24,6 +30,11 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+
+    <!-- Main Content -->
+    <main class="header"></main>
+    <section class="gallery"></section>
+
     <!-- Footer -->
     <footer>
       <div class="footer__logo">Genesis</div>
