Add svg tag in nav and footer, and linked to Logo in images folder. Renders in browser in correct size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
   <body>
     <!-- Navigation -->
     <nav class="navigation">
-      <div class="logo">Genesis</div>
+      <div class="logo">
+        <svg>
+          <use xlink:href="images/Logo.svg#logo"></use>
+        </svg>
+      </div>
       <ul class="navigation__links">
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
@@ -37,12 +41,16 @@
 
     <!-- Footer -->
     <footer>
-      <div class="footer__logo">Genesis</div>
-      <ul>
+      <div class="footer__logo">
+        <svg>
+          <use xlink:href="images/Logo.svg#logo"></use>
+        </svg>
+      </div>
+      <ul class="footer__links">
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-      <ul>
+      <ul class="footer__social-links">
         <li>
           <a href="https://dribbble.com/tags/flipcard"
             ><i class="fab fa-dribbble"></i
