Position navigation links and logo in navbar and footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="gallery"></section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <div class="footer__logo">
         <svg>
           <use xlink:href="images/Logo.svg#logo"></use>
@@ -50,7 +50,7 @@
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-      <ul class="footer__social-links">
+      <ul class="footer__links social-links">
         <li>
           <a href="https://dribbble.com/tags/flipcard"
             ><i class="fab fa-dribbble"></i
