Add project and contact html and scss partial files

--- a/pages/project.html
+++ b/pages/project.html
@@ -30,8 +30,8 @@
         </svg>
       </div>
       <ul class="navigation__links">
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
 
@@ -47,7 +47,7 @@
         </svg>
       </div>
       <ul class="footer__links">
-        <li><a href="#projects">Projects</a></li>
+        <li id="projects"><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <ul class="footer__links social-links">
