Add font style mixin to mixin file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="header"></main>
+    <main class="header">
+      <h3 class="header__tertiary"><span>Shooting Stars</span></h3>
+      <h1 class="header__primary">
+        Hello, I’m Bakhtiyar Sattarov, <span>product designer</span> with
+        experience in studios and startups
+      </h1>
+    </main>
     <section class="gallery"></section>
 
     <!-- Footer -->
