Style and positioning header elements

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
     <!-- Main Content -->
     <main class="header">
       <h3 class="header__tertiary"><span>Shooting Stars</span></h3>
-      <h1 class="header__primary">
-        Hello, I’m Bakhtiyar Sattarov, <span>product designer</span> with
-        experience in studios and startups
-      </h1>
+      <div class="header__box">
+        <h1 class="header__box-primary">
+          Hello, I’m Bakhtiyar Sattarov, <span>product designer</span> with
+          experience in studios and startups
+        </h1>
+        <p class="header__box-text">Design is about progress</p>
+      </div>
     </main>
     <section class="gallery"></section>
 
