Connect html pages for navigation

--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
-        <svg>
-          <use xlink:href="images/Logo.svg#logo"></use>
-        </svg>
+        <a id="home" href="#home">
+          <svg>
+            <use xlink:href="images/Logo.svg#logo"></use>
+          </svg>
+        </a>
       </div>
       <ul class="footer__links">
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="pages/projects.html">Projects</a></li>
+        <li><a href="pages.contact.html">Contact</a></li>
       </ul>
       <ul class="footer__links social-links">
         <li>
