--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,12 +25,14 @@
     <!-- Navigation -->
     <nav class="navigation">
       <div class="logo">
-        <svg>
-          <use xlink:href="images/Logo.svg#logo"></use>
-        </svg>
+        <a href="index.html">
+          <svg>
+            <use xlink:href="images/Logo.svg#logo"></use>
+          </svg>
+        </a>
       </div>
       <ul class="navigation__links">
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="pages/project.html">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
