--- a/pages/project.html
+++ b/pages/project.html
@@ -25,13 +25,15 @@
     <!-- Navigation -->
     <nav class="navigation">
       <div class="logo">
-        <svg>
-          <use xlink:href="images/Logo.svg#logo"></use>
-        </svg>
+        <a href="index.html">
+          <svg>
+            <use xlink:href="images/Logo.svg#logo"></use>
+          </svg>
+        </a>
       </div>
       <ul class="navigation__links">
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
 
