Fix bug in linkin back to home. Incorrect file path

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <body>
     <!-- Navigation -->
     <nav class="navigation">
-      <div class="logo">
+      <div id="home" class="logo">
         <svg>
           <use xlink:href="images/Logo.svg#logo"></use>
         </svg>
       </div>
       <ul class="navigation__links">
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="pages/project.html">Projects</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -51,15 +51,15 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
-        <a id="home" href="#home">
+        <a href="#home">
           <svg>
             <use xlink:href="images/Logo.svg#logo"></use>
           </svg>
         </a>
       </div>
       <ul class="footer__links">
-        <li><a href="pages/projects.html">Projects</a></li>
-        <li><a href="pages.contact.html">Contact</a></li>
+        <li><a href="pages/project.html">Projects</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
       </ul>
       <ul class="footer__links social-links">
         <li>
