--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,31 +25,33 @@
     <!-- Navigation -->
     <nav class="navigation">
       <div class="logo">
-        <a href="index.html">
+        <a href="../index.html">
           <svg>
-            <use xlink:href="images/Logo.svg#logo"></use>
+            <use xlink:href="/images/Logo.svg#logo"></use>
           </svg>
         </a>
       </div>
       <ul class="navigation__links">
         <li><a href="pages/project.html">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a id="contact" href="#contact">Contact</a></li>
       </ul>
     </nav>
 
     <!-- Main Content -->
-    <main class="header"></main>
-    <section class="gallery"></section>
+    <main class="header">
+      <h1>this is contact page</h1>
+    </main>
+    <section></section>
 
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
         <svg>
-          <use xlink:href="images/Logo.svg#logo"></use>
+          <use xlink:href="/images/Logo.svg#logo"></use>
         </svg>
       </div>
       <ul class="footer__links">
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="pages/project.html">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <ul class="footer__links social-links">
