Bug fix incorrect file path between index, project and contact pages. Corrected typo

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,7 @@
         </a>
       </div>
       <ul class="navigation__links">
-        <li><a href="pages/project.html">Projects</a></li>
+        <li><a href="project.html">Projects</a></li>
         <li><a id="contact" href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -51,7 +51,7 @@
         </svg>
       </div>
       <ul class="footer__links">
-        <li><a href="pages/project.html">Projects</a></li>
+        <li><a href="project.html">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <ul class="footer__links social-links">
