--- a/pages/project.html
+++ b/pages/project.html
@@ -33,7 +33,7 @@
       </div>
       <ul class="navigation__links">
         <li><a id="projects" href="#projects">Projects</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -52,7 +52,7 @@
       </div>
       <ul class="footer__links">
         <li><a href="#projects">Projects</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul class="footer__links social-links">
         <li>
