--- a/pages/project.html
+++ b/pages/project.html
@@ -17,7 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <link rel="stylesheet" href="css/project.css" type="text/css" />
     <link rel="icon" href="images/favicon-16x16.png" />
     <title>Genesis</title>
   </head>
