--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,11 +17,12 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="icon" href="images/favicon-16x16.png" />
+    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="icon" href="/images/favicon-16x16.png" />
     <title>Genesis</title>
   </head>
-  <body>
+  <body id="contact">
     <!-- Navigation -->
     <nav class="navigation">
       <div class="logo">
@@ -33,7 +34,7 @@
       </div>
       <ul class="navigation__links">
         <li><a href="project.html">Projects</a></li>
-        <li><a id="contact" href="#contact">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
