Add and positioned project page header

--- a/pages/project.html
+++ b/pages/project.html
@@ -41,8 +41,10 @@
     <!-- Main Content -->
     <main class="header">
       <div class="header__box">
-        <div class="header__box-text">
-          <h1>A fresh new title can make all the difference!</h1>
+        <div class="header__box-secondary">
+          <h1 class="header__box-primary">
+            A fresh new title can make all the difference!
+          </h1>
           <p>
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
@@ -57,7 +59,7 @@
             words, combined with a handful of model sentence structures.
           </p>
         </div>
-        <div class="header__table-box"></div>
+        <div class="header__table-box header__box-text"></div>
       </div>
     </main>
     <section></section>
