--- a/pages/project.html
+++ b/pages/project.html
@@ -45,13 +45,13 @@
           <h1 class="header__box-primary">
             A fresh new title can make all the difference!
           </h1>
-          <p>
+          <p class="header__box-paragraph">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even slightly
             believable.
           </p>
-          <p>
+          <p class="header__box-paragraph">
             You need to be sure there isn't anything embarrassing hidden in the
             middle of text. All the Lorem Ipsum generators on the Internet tend
             to repeat predefined chunks as necessary, making this the first true
@@ -59,7 +59,34 @@
             words, combined with a handful of model sentence structures.
           </p>
         </div>
-        <div class="header__table-box header__box-text"></div>
+        <div class="header__table-box header__box-text">
+          <table class="header__table">
+            <tr>
+              <td class="header__table-td">Project</td>
+              <td class="header__table-td">Gensesis Portfolio</td>
+            </tr>
+            <tr>
+              <td class="header__table-td">Design</td>
+              <td class="header__table-td">Bakhtiyar Sattarov</td>
+            </tr>
+            <tr>
+              <td class="header__table-td">Client</td>
+              <td class="header__table-td">Craftwork</td>
+            </tr>
+            <tr>
+              <td class="header__table-td">Deliverable</td>
+              <td class="header__table-td">Website Design</td>
+            </tr>
+            <tr>
+              <td class="header__table-td">Year</td>
+              <td class="header__table-td">2018</td>
+            </tr>
+            <tr>
+              <td class="header__table-td">Field</td>
+              <td class="header__table-td">Branding, Personal</td>
+            </tr>
+          </table>
+        </div>
       </div>
     </main>
     <section></section>
