Style project header

--- a/pages/project.html
+++ b/pages/project.html
@@ -59,31 +59,31 @@
             words, combined with a handful of model sentence structures.
           </p>
         </div>
-        <div class="header__table-box header__box-text">
+        <div class="header__table-box">
           <table class="header__table">
             <tr>
               <td class="header__table-td">Project</td>
-              <td class="header__table-td">Gensesis Portfolio</td>
+              <td class="header__table-td bold">Gensesis Portfolio</td>
             </tr>
             <tr>
               <td class="header__table-td">Design</td>
-              <td class="header__table-td">Bakhtiyar Sattarov</td>
+              <td class="header__table-td bold">Bakhtiyar Sattarov</td>
             </tr>
             <tr>
               <td class="header__table-td">Client</td>
-              <td class="header__table-td">Craftwork</td>
+              <td class="header__table-td bold">Craftwork</td>
             </tr>
             <tr>
               <td class="header__table-td">Deliverable</td>
-              <td class="header__table-td">Website Design</td>
+              <td class="header__table-td bold">Website Design</td>
             </tr>
             <tr>
               <td class="header__table-td">Year</td>
-              <td class="header__table-td">2018</td>
+              <td class="header__table-td bold">2018</td>
             </tr>
             <tr>
               <td class="header__table-td">Field</td>
-              <td class="header__table-td">Branding, Personal</td>
+              <td class="header__table-td bold">Branding, Personal</td>
             </tr>
           </table>
         </div>
