Add hero image to project page

--- a/pages/project.html
+++ b/pages/project.html
@@ -89,7 +89,11 @@
         </div>
       </div>
     </main>
-    <section></section>
+    <section>
+      <div class="project__hero-image">
+        <img src="/images/girl-carpet.png" alt="A young woman is walking" />
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
