--- a/pages/project.html
+++ b/pages/project.html
@@ -94,7 +94,26 @@
         <img src="/images/girl-carpet.png" alt="A young woman is walking" />
       </div>
     </section>
-
+    <section>
+      <p class="text__container-paragraph">
+        There are many variations of passages of Lorem Ipsum available, but the
+        majority have suffered alteration in some form, by injected humour, or
+        randomised words which don't look even slightly believable. If you are
+        going to use a passage of Lorem Ipsum, You need to be sure there isn't
+        anything embarrassing hidden in the middle of text. You need to be sure
+        there isn't anything embarrassing hidden in the middle of text.
+      </p>
+    </section>
+    <section class="image__section">
+      <div class="image__container">
+        <img src="/images/islands.png" alt="Green lucious islands" />
+        <img src="/images/change-you.png" alt="Flowers in a vase" />
+        <img
+          src="/images/neon-door.png"
+          alt="Entrance in neon light at night"
+        />
+      </div>
+    </section>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
