Add contact header text content and form structure

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,9 +40,31 @@
 
     <!-- Main Content -->
     <main class="header">
-      <h1>this is contact page</h1>
+      <div class="header__box">
+        <div class="header__box-secondary">
+          <h1 class="header__box-primary">
+            Full set of great features to make your product fresh
+          </h1>
+          <p class="header__box-paragraph">
+            Our favorite brands are our friends! We help them to achieve their
+            goals, they help us to stay sharp.
+          </p>
+        </div>
+        <!-- Form -->
+        <form action="">
+          <label for="">Name</label>
+          <input type="text" />
+          <label for="">Email</label>
+          <input type="text" />
+          <label for="">Message</label>
+          <input type="text" />
+          <input type="btn" value="submit" />
+        </form>
+      </div>
     </main>
-    <section></section>
+    <section>
+      <img class="img-map" src="/images/Map.png" alt="City map" />
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
