Add sub header section. Style and positioned elements

--- a/index.html
+++ b/index.html
@@ -46,8 +46,33 @@
         <p class="header__box-text">Design is about progress</p>
       </div>
     </main>
+    <!-- Image gallery -->
     <section class="gallery"></section>
+    <!-- Sub heading -->
 
+    <section>
+      <div class="sub__container">
+        <h2 class="sub__header-primary">
+          We love work hard and explore new things that’s why we cover lot of
+          things. Check our service list and view details
+        </h2>
+        <div class="list__container">
+          <ul class="sub__list">
+            <li>Multimedia</li>
+            <li class="sub__list-li">Interactive Design</li>
+            <li class="sub__list-li">Branding</li>
+          </ul>
+          <ul class="sub__list">
+            <li>Creative design</li>
+            <li class="sub__list-li">Packaging</li>
+            <li class="sub__list-li">Coding</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <hr class="ruler" />
+    <!-- Award section -->
+    <!-- Design section -->
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
