Add small line above 'design' text in header

--- a/index.html
+++ b/index.html
@@ -58,20 +58,23 @@
         </h2>
         <div class="list__container">
           <ul class="sub__list">
-            <li>Multimedia</li>
+            <li class="sub__list-media">Multimedia</li>
             <li class="sub__list-li">Interactive Design</li>
             <li class="sub__list-li">Branding</li>
           </ul>
           <ul class="sub__list">
-            <li>Creative design</li>
+            <li class="sub__list-design">Creative design</li>
             <li class="sub__list-li">Packaging</li>
             <li class="sub__list-li">Coding</li>
           </ul>
         </div>
       </div>
     </section>
-    <hr class="ruler" />
+    <hr />
     <!-- Award section -->
+    <section>
+      <div></div>
+    </section>
     <!-- Design section -->
     <!-- Footer -->
     <footer class="footer">
