Add html structure to grid award section

--- a/index.html
+++ b/index.html
@@ -72,10 +72,27 @@
     </section>
     <hr />
     <!-- Award section -->
-    <section>
-      <div></div>
+    <section class="grid__section">
+      <div class="grid__section-awards">
+        <h3 class="grid__section-header">Awards</h3>
+        <h4 class="grid__section-sub">Site of the day</h4>
+        <p class="grid__section-title">Genesis UI Kit</p>
+        <p class="grid__section-title">2018</p>
+        <p class="grid__section-text">
+          Application that helps to find nearest sport centres
+        </p>
+        <h4 class="grid__section-sub">Best navigation</h4>
+        <p class="grid__section-title">Genesis Template</p>
+        <p class="grid__section-title">2018</p>
+        <p class="grid__section-text">
+          Application that helps to find nearest sport centres
+        </p>
+      </div>
     </section>
     <!-- Design section -->
+    <section class="grid__section">
+      <div class="grid__section-design"></div>
+    </section>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
