Add html structure to grid design section

--- a/index.html
+++ b/index.html
@@ -88,10 +88,26 @@
           Application that helps to find nearest sport centres
         </p>
       </div>
+      <hr />
     </section>
     <!-- Design section -->
     <section class="grid__section">
-      <div class="grid__section-design"></div>
+      <div class="grid__section-awards">
+        <h3 class="grid__section-header">CSS Design Awards</h3>
+        <h4 class="grid__section-sub">Site of the day</h4>
+        <p class="grid__section-title">Genesis UI Kit</p>
+        <p class="grid__section-title">2017</p>
+        <p class="grid__section-text">
+          Application that helps to find nearest sport centres
+        </p>
+        <h4 class="grid__section-sub">Best navigation</h4>
+        <p class="grid__section-title">Genesis Template</p>
+        <p class="grid__section-title">2016</p>
+        <p class="grid__section-text">
+          Application that helps to find nearest sport centres
+        </p>
+      </div>
+      <hr />
     </section>
     <!-- Footer -->
     <footer class="footer">
