Aligning award and design section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </p>
       <!--</div>-->
     </section>
-    <hr />
+    <hr class="mid--ruler" />
     <!-- Design section -->
     <section class="grid__section">
       <!--<div class="grid__section-design">-->
