--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <body>
     <!-- Navigation -->
     <nav class="navigation">
-      <div id="home" class="logo">
-        <svg>
+      <div id="home">
+        <svg class="logo">
           <use xlink:href="images/Logo.svg#logo"></use>
         </svg>
       </div>
@@ -108,12 +108,12 @@
       </p>
       <!--</div>-->
     </section>
-    <hr />
+    <hr class="mid--ruler" />
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
         <a href="#home">
-          <svg>
+          <svg class="logo">
             <use xlink:href="images/Logo.svg#logo"></use>
           </svg>
         </a>
