--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,9 +25,9 @@
   <body id="contact">
     <!-- Navigation -->
     <nav class="navigation">
-      <div class="logo">
+      <div >
         <a href="../index.html">
-          <svg>
+          <svg class="logo">
             <use xlink:href="/images/Logo.svg#logo"></use>
           </svg>
         </a>
@@ -100,10 +100,12 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer__logo">
-        <svg>
-          <use xlink:href="/images/Logo.svg#logo"></use>
-        </svg>
+      <div>
+        <a href="../index.html">
+          <svg class="logo">
+            <use xlink:href="/images/Logo.svg#logo"></use>
+          </svg>
+        </a>
       </div>
       <ul class="footer__links">
         <li><a href="project.html">Projects</a></li>
