--- a/pages/project.html
+++ b/pages/project.html
@@ -22,18 +22,18 @@
     <link rel="icon" href="/images/favicon-16x16.png" />
     <title>Genesis</title>
   </head>
-  <body>
+  <body id="projects">
     <!-- Navigation -->
     <nav class="navigation">
-      <div class="logo">
+      <div>
         <a href="../index.html">
-          <svg>
+          <svg class="logo">
             <use xlink:href="/images/Logo.svg#logo"></use>
           </svg>
         </a>
       </div>
       <ul class="navigation__links">
-        <li><a id="projects" href="#projects">Projects</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -117,9 +117,11 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
-        <svg>
-          <use xlink:href="/images/Logo.svg#logo"></use>
-        </svg>
+        <a href="../index.html">
+          <svg class="logo">
+            <use xlink:href="/images/Logo.svg#logo"></use>
+          </svg>
+        </a>
       </div>
       <ul class="footer__links">
         <li><a href="#projects">Projects</a></li>
