--- a/pages/project.html
+++ b/pages/project.html
@@ -59,6 +59,8 @@
             words, combined with a handful of model sentence structures.
           </p>
         </div>
+
+        <!-- Table -->
         <div class="header__table-box">
           <table class="header__table">
             <tr>
@@ -89,11 +91,15 @@
         </div>
       </div>
     </main>
+
+    <!-- Hero image -->
     <section>
       <div class="project__hero-image">
         <img src="/images/girl-carpet.png" alt="A young woman is walking" />
       </div>
     </section>
+
+    <!-- Sub header -->
     <section>
       <p class="text__container-paragraph">
         There are many variations of passages of Lorem Ipsum available, but the
@@ -104,6 +110,8 @@
         there isn't anything embarrassing hidden in the middle of text.
       </p>
     </section>
+
+    <!-- Image section -->
     <section class="image__section">
       <div class="image__container">
         <img src="/images/islands.png" alt="Green lucious islands" />
@@ -114,6 +122,7 @@
         />
       </div>
     </section>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__logo">
