Add grid system and images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,61 @@
     </main>
 
     <!-- Image gallery -->
-    <section class="gallery"></section>
+    <section class="gallery">
+      <img class="gallery__img1" src="images/statue.png" alt="Woman statue" />
+      <img
+        class="gallery__img2"
+        src="images/man-glasses.png"
+        alt="Man wearing glasses"
+      />
+      <img
+        class="gallery__img3"
+        src="images/broken-face.png"
+        alt="Man with broken face"
+      />
+      <img
+        class="gallery__img4"
+        src="images/cactuses.png"
+        alt="Man sitting on cactuses"
+      />
+      <img
+        class="gallery__img5"
+        src="images/liberty.png"
+        alt="Statue of Liberty"
+        gallery__
+      />
+      <img
+        class="gallery__img6"
+        src="images/silver-face.png"
+        alt="Man with silver face"
+      />
+      <img
+        class="gallery__img7"
+        src="images/cloth-figure.png"
+        alt="Clothed statue"
+      />
+      <img
+        class="gallery__img8"
+        src="images/oranges.png"
+        alt="Young woman walking"
+      />
+      <img
+        class="gallery__img9"
+        src="images/piano.png"
+        alt="Keyboard of a piano"
+      />
+      <img
+        class="gallery__img10"
+        src="images/sunset-flowers.png"
+        alt="Flowers in sunset"
+      />
+      <img
+        class="gallery__img11"
+        src="images/sunset-woman.png"
+        alt="Woman in sunset"
+      />
+      <img class="gallery__img12" src="images/tiny-island.png" alt="Islands" />
+    </section>
 
     <!-- Sub heading -->
     <section>
