Bug fix file path to render styleshett properly on Windows. Removed unnecessary closing input tag and shortend letter spacing to two decimals

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,16 +17,15 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/contact.css" />
     <link rel="icon" href="/images/favicon-16x16.png" />
     <title>Genesis</title>
   </head>
   <body id="contact">
-
     <!-- Navigation -->
     <nav class="navigation">
-      <div >
+      <div>
         <a href="../index.html">
           <svg class="logo">
             <use xlink:href="/images/Logo.svg#logo"></use>
@@ -68,7 +67,7 @@
             class="form__container-input"
             name="email"
             id="email"
-            type="text"
+            type="email"
             placeholder="Email"
             required
           />
@@ -79,7 +78,7 @@
             type="text"
             placeholder="Message"
           ></textarea>
-          <input type="submit" value="Submit" class="form__container-btn"></input>
+          <input type="submit" value="Submit" class="form__container-btn" />
         </form>
       </div>
     </main>
